@@ -49,7 +49,7 @@ public class MysqlConsumerStateStore extends ConsumerStateStore {
             EventoServer eventoServer,
             PerformanceService performanceService,
             Supplier<Connection> connectionFactory) {
-        this(eventoServer, performanceService, connectionFactory, ObjectMapperUtils.getPayloadObjectMapper(), Executors.newVirtualThreadPerTaskExecutor(),
+        this(eventoServer, performanceService, connectionFactory, ObjectMapperUtils.getPayloadObjectMapper(), Executors.newCachedThreadPool(),
                 "", "");
     }
 
@@ -68,7 +68,7 @@ public class MysqlConsumerStateStore extends ConsumerStateStore {
             Supplier<Connection> connectionFactory,
             String tablePrefix,
             String tableSuffix) {
-        this(eventoServer, performanceService, connectionFactory, ObjectMapperUtils.getPayloadObjectMapper(), Executors.newVirtualThreadPerTaskExecutor(),
+        this(eventoServer, performanceService, connectionFactory, ObjectMapperUtils.getPayloadObjectMapper(), Executors.newCachedThreadPool(),
                 tablePrefix, tableSuffix);
     }
 
